--- a/client2/package.json
+++ b/client2/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-axios": "^3.4.0",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
