--- a/client2/package.json
+++ b/client2/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "igv": "^2.10.4",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.0",
     "vuetify": "^2.4.0"
