--- a/client2/package.json
+++ b/client2/package.json
@@ -12,6 +12,7 @@
     "igv": "^2.10.4",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.0",
+    "vue-router": "^3.5.3",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
