--- a/client2/.env.development
+++ b/client2/.env.development
@@ -1,2 +1,2 @@
 VUE_APP_API_BASE_URL=http://localhost:5000
-VUE_APP_STATIC_URL=http://localhost:5000/static
+VUE_APP_STATIC_URL=http://localhost:5000/static/
