--- a/client2/package.json
+++ b/client2/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "biojs-vis-inchlib": "^1.1.2",
     "core-js": "^3.8.3",
     "igv": "^2.10.4",
+    "jquery": "^3.6.0",
+    "kinetic": "^5.2.0",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.0",
     "vue-pdf": "^4.3.0",
